# pyproject.toml
[project]
name = "random-seed-batch-generator"
description = "Generate multiple groups of seeds for batch image processing in ComfyUI."
version = "1.0.2"
license = { file = "LICENSE.txt" }
dependencies = []

[project.urls]
Repository = "https://github.com/Glashkoff/comfyui-random-seed-batch-generator"

[tool.comfy]
PublisherId = "glashkoff"
DisplayName = "Random Seed Batch Generator"
requires-comfyui = ">=0.25.0"
